[project]
name = "rtichoke-blog-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lifelines>=0.30.0",
    "matplotlib>=3.10.7",
    "rtichoke>=0.1.24",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]
